# project-template

./: .gitignore  modes.yml  pyproject.toml  setup_server.py  teardown_server.py
config/: experiment_config.py  instruments.yml  modes.yml  update_resources.py
experiments/qubit_experiments_GE/: T2.py
scripts/: T1_cavity.py  T1_qubit.py  cavity_spec.py  dispersive shift.py  displacement_cal.py  mixer_tuning.py  power rabi EF.py  power rabi.py  qubit_spec.py  qubit_spec_EF.py  qubit_spectroscopy.py  resonator_spectroscopy.py  rr_spec.py  rr_spec_chi.py  spectrum_analyzer_sweep.py  time_of_flight.py  time_of_flight_demod.py  tof_test.py
scripts/readout_calibration/: README.md  calibrate_dc_offset.py  integration_weights_training.py  threshold_calculation.py  time_difference_calibration.py
