[tool.poetry]
name = "project-template"
version = "0.1.0"
description = "Extensible template for measurement scripting with qcore"
authors = ["Qcrew <general.qcrew@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "project_template"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
qcore = {git = "https://github.com/Qcrew/qcore.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
